Final com function no html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="resultado"></div>
 
-
-    <!--script src="./script.js"></script-->
+    <script src="./mediaAluno.js"></script>
+    
 </body>
 </html>
